styles/_base.scss
@font-face {
  font-family: "Magallanes";
  src: url(#{'{{"MagallanesRegular.ttf" | asset_url}}'}) format("truetype");
}

html {
  scroll-behavior: smooth;
}

.main-content {
  padding: 0 !important;
  margin: 0 !important;
  background: #f5f5f5;
}

.theme-button {
  font-family: "Open Sans";
  font-size: 18px;
  line-height: 25px;
  color: #4a4a4a;
  background: #eaeaea;
  border: 1px solid #4a4a4a;
  padding: 12px 32px;
  margin-top: 50px;
  display: inline-block;
  text-align: center;

  &.large {
    display: block;
  }

  &.green {
    color: white;
    background-color: #00ae73;
    border-color: #00ae73;
    transition: 0.25s;
    &:hover {
      color: #4a4a4a;
      background: #eaeaea;
      border: 1px solid #4a4a4a;
    }
  }

  &.purple:hover {
    color: white;
    background-color: #6241bb;
    border-color: #6241bb;
    transition: 0.25s;
  }

  &.blue:hover {
    color: white;
    background-color: #3276af;
    border-color: #3276af;
    transition: 0.25s;
  }

  &.yellow:hover {
    color: white;
    background-color: #e9c546;
    border-color: #e9c546;
    transition: 0.25s;
  }
}

.d-none {
  display: none !important;
}

.center {
  display: flex;
  justify-content: center;
}

.choose-package {
  margin-top: 130px;

  .first-header {
    display: none;
  }
}

.slick-prev:before,
.slick-next:before {
  height: 20px;
  width: 20px;
  background-image: url(slick-arrow.svg);
  background-size: contain;
  color: #ffffff00 !important;
  background-repeat: no-repeat;
}

.slick-next:before {
  background-image: url(slick-arrow-right.svg);
}
.online-shop {
  height: 100vh;
  overflow-y: scroll;
  .choose-package {
    position: relative;
    z-index: 10;
  }
  .navigate_page {
    width: 100%;
    background-color: #fff;
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    z-index: 20;

    ul {
      display: flex;
      cursor: pointer;
      li {
        flex: 1;
        text-align: center;
        padding: 10px 0;
        font-weight: 700;
        font-size: 18px;
        a {
          display: block;
        }
        &.active {
          background-color: #3276af;
          color: #fff;
          a {
            color: #fff;
          }
        }
      }
    }
  }
}

